--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Receptenboek</title>
 </head>
 
 <body>
-    <h1>Recepten</h1>
+    <header>
+        <div class="header-logo">
+            <img src="./images/logo.jpg" width="100" alt="">
+        </div>
+        <div class="header-title">
+            <p>super awesome recipe book</p>
+        </div>
+        <nav class="header-nav">
+            <a href="./index.html">Homepagina</a>
+            <a href="./contact.html">Contact</a>
+        </nav>
+    </header>
+
+
+    <section class="home-introduction">
+        <p>Welkom bij het receptenboek van Esma en Tom</p>
+    </section>
+
+
+    <section class="home-recipe-grid">
+        <a href="./spaghettiBolognese.html" class="home-recipe">
+            <img src="./images/SpaghettiBolognese.jpg" alt="">
+            <p>Spaghetti Bolognese</p>
+        </a>
+        <a href="./spaghettiBolognese.html" class="home-recipe">
+            <img src="./images/SpaghettiBolognese.jpg" alt="">
+            <p>Spaghetti Bolognese</p>
+        </a>
+        <a href="./spaghettiBolognese.html" class="home-recipe">
+            <img src="./images/SpaghettiBolognese.jpg" alt="">
+            <p>Spaghetti Bolognese</p>
+        </a>
+        <a href="./spaghettiBolognese.html" class="home-recipe">
+            <img src="./images/SpaghettiBolognese.jpg" alt="">
+            <p>Spaghetti Bolognese</p>
+        </a>
+
+
+    </section>
+
+    <a href="./spaghettiBolognese.html">Test</a>
+
+
+
+    <footer>
+
+        <p>&#169; 2022 Esma and Tom Productions</p>
+    </footer>
+
 </body>
 
 </html>
