--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
+@import 'abstracts/variables.scss';
+
 @import 'base/reset.scss';
 @import 'base/typography.scss';
 
@@ -6,3 +8,4 @@
 
 @import 'pages/home.scss';
 @import 'pages/recipe.scss';
+@import 'pages/general.scss';
