--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -2,14 +2,47 @@
     max-width: 50rem;
     margin: 0 auto;
     text-align: center;
+    padding: 2rem;
 }
 
 .home-recipe-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-
+    gap: 1rem;
     max-width: 50rem;
     margin: 0 auto;
+    padding-bottom: 3rem;
+
+    img {
+        aspect-ratio: 1/1.5;
+        object-fit: cover;
+    }
+
+    a {
+    position: relative;
+    overflow: hidden;
+    border-radius: 1rem;
+    
+    }
+
+    p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        opacity: 0;
+        background: rgba(0,0,0,0.5);
+        box-shadow: 0 0 0 1000px rgba(0,0,0,0.5);
+        transition: opacity 0.5s;
+    }
+
+    a:hover {
+        
+        p {
+            opacity: 1;
+        }
+    }    
 }
 
 .home-recipe {
