--- a/views/index.html
+++ b/views/index.html
@@ -10,55 +10,53 @@
 </head>
 
 <body>
-    <header>
-        <div class="header-logo">
-            <img src="./images/logo.jpg" width="100" alt="">
-        </div>
-        <div class="header-title">
-            <p>super awesome recipe book</p>
-        </div>
-        <nav class="header-nav">
-            <a href="./index.html">Homepagina</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
-    </header>
 
+    <div class="bg-primary">
+        <header>
+            <div class="header-logo">
+                <a href="./index.html"><img src="./images/logo.png" width="100" alt=""></a>
+            </div>
+            <div class="header-title">
+                <p>super awesome recipe book</p>
+            </div>
+            <nav class="header-nav">
+                <a href="./index.html">Homepagina</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </header>
+    </div>
 
     <section class="home-introduction">
         <p>Welkom bij het receptenboek van Esma en Tom</p>
+        <p>Wij houden van de Italiaanse keuken! Hieronder kun je onze favoriete recepten vinden. Met deze recepten waan je je in een handomdraai in het mooie Italië. Of je nu een pizza salami wil maken of een heerlijke tiramisu, hier is alles te vinden!</p>
     </section>
-
 
     <section class="home-recipe-grid">
         <a href="./spaghettiBolognese.html" class="home-recipe">
             <img src="./images/SpaghettiBolognese.jpg" alt="">
             <p>Spaghetti Bolognese</p>
         </a>
-        <a href="./spaghettiBolognese.html" class="home-recipe">
-            <img src="./images/SpaghettiBolognese.jpg" alt="">
-            <p>Spaghetti Bolognese</p>
+        <a href="./pizzaSalami.html" class="home-recipe">
+            <img src="./images/PizzaSalami.jfif" alt="">
+            <p>Pizza Salami</p>
+        </a>
+        <a href="./tiramisu.html" class="home-recipe">
+            <img src="./images/Tiramisu.jpg" alt="">
+            <p>Tiramisu</p>
         </a>
         <a href="./spaghettiBolognese.html" class="home-recipe">
             <img src="./images/SpaghettiBolognese.jpg" alt="">
             <p>Spaghetti Bolognese</p>
         </a>
-        <a href="./spaghettiBolognese.html" class="home-recipe">
-            <img src="./images/SpaghettiBolognese.jpg" alt="">
-            <p>Spaghetti Bolognese</p>
-        </a>
-
-
     </section>
 
-    <a href="./spaghettiBolognese.html">Test</a>
-
-
-
-    <footer>
-
-        <p>&#169; 2022 Esma and Tom Productions</p>
-    </footer>
-
+    <div class="footer-div">
+        <footer>
+            <div class="bg-primary">
+                <p class="text-center">&#169; 2022 Esma and Tom Productions</p>
+            </div>
+        </footer>
+    </div>
+   
 </body>
-
 </html>
