--- a/views/spaghettiBolognese.html
+++ b/views/spaghettiBolognese.html
@@ -11,18 +11,20 @@
 
 <body>
 
-    <header>
-        <div class="header-logo">
-            <img src="./images/logo.jpg" width="100" alt="">
-        </div>
-        <div class="header-title">
-            <p>super awesome recipe book</p>
-        </div>
-        <nav class="header-nav">
-            <a href="./index.html">Homepagina</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
-    </header>
+    <div class="bg-primary">
+        <header>
+            <div class="header-logo">
+                <a href="./index.html"><img src="./images/logo.png" width="100" alt=""></a>
+            </div>
+            <div class="header-title">
+                <p>super awesome recipe book</p>
+            </div>
+            <nav class="header-nav">
+                <a href="./index.html">Homepagina</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </header>
+    </div>
 
     <section class="recipe-title">
         <div class="recipe-title-text">
@@ -52,7 +54,6 @@
         </section>
 
         <section class="recipe-how-to">
-
             <h2>Bereidingswijze:</h2>
             <ol>
                 <li>
@@ -77,23 +78,16 @@
                     saus erover.
                 </li>
             </ol>
-
         </section>
     </div>
 
-    <footer>
-
-        <p>&#169; 2022 Esma and Tom Productions</p>
-    </footer>
-
-
-
-
-
-
-
-
-
+    <div class="footer-div">
+        <footer>
+            <div class="bg-primary">
+                <p class="text-center">&#169; 2022 Esma and Tom Productions</p>
+            </div>
+        </footer>
+    </div>
 
 </body>
 
