--- a/css/main.css
+++ b/css/main.css
@@ -107,12 +107,18 @@ h2 {
   font-family: "Pacifico", cursive;
 }
 
+.text-center {
+  text-align: center;
+}
+
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: #e1e8e7;
   max-width: 50rem;
   margin: 0 auto;
+  padding: 2rem;
 }
 
 nav {
@@ -124,21 +130,58 @@ nav {
 footer {
   display: flex;
   justify-content: center;
-  max-width: 50rem;
+  align-items: flex-end;
+  flex-grow: 1;
   margin: 0 auto;
+}
+footer .bg-primary {
+  padding: 2rem;
+}
+
+.footer-div {
+  width: 100vw;
+  display: flex;
+  flex-grow: 1;
 }
 
 .home-introduction {
   max-width: 50rem;
   margin: 0 auto;
   text-align: center;
+  padding: 2rem;
 }
 
 .home-recipe-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
   max-width: 50rem;
   margin: 0 auto;
+  padding-bottom: 3rem;
+}
+.home-recipe-grid img {
+  aspect-ratio: 1/1.5;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.home-recipe-grid a {
+  position: relative;
+  overflow: hidden;
+  border-radius: 1rem;
+}
+.home-recipe-grid p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 1000px rgba(0, 0, 0, 0.5);
+  transition: opacity 0.5s;
+}
+.home-recipe-grid a:hover p {
+  opacity: 1;
 }
 
 .home-recipe {
@@ -156,6 +199,9 @@ footer {
 .recipe-title-image {
   max-width: 30rem;
 }
+.recipe-title-image img {
+  border-radius: 1rem;
+}
 
 .recipe-wrapper {
   display: flex;
@@ -168,3 +214,19 @@ footer {
 .recipe-ingredients {
   min-width: 12.5rem;
 }
+
+ul {
+  padding-bottom: 1rem;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow-x: hidden;
+}
+
+.bg-primary {
+  background: #e1e8e7;
+  width: 100vw;
+}/*# sourceMappingURL=main.css.map */
