--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,8 +1,17 @@
 footer {
     display: flex;
     justify-content: center;
-
-
-    max-width: 50rem;
+    align-items: flex-end;
+    flex-grow: 1;
     margin: 0 auto;
+
+    .bg-primary {
+        padding: 2rem;
+    }
+}
+
+.footer-div {
+    width: 100vw;
+    display: flex;
+    flex-grow: 1;
 }
