--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -2,9 +2,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    background: $primaryColor;
     max-width: 50rem;
     margin: 0 auto;
+    padding: 2rem;
 }
 
 nav {
