--- a/scss/pages/_recipe.scss
+++ b/scss/pages/_recipe.scss
@@ -3,12 +3,15 @@
     justify-content: center;
     align-items: center;
     gap: 3rem;
-
-    margin: 3rem auto;
+    margin: 3rem auto; 
 }
 
 .recipe-title-image {
     max-width: 30rem;
+    
+    img {
+        border-radius: 1rem;
+    }
 }
 
 .recipe-wrapper {
@@ -21,4 +24,8 @@
 
 .recipe-ingredients {
     min-width: 12.5rem;
+}
+
+ul {
+    padding-bottom: 1rem;
 }
