--- a/views/index.html
+++ b/views/index.html
@@ -28,25 +28,27 @@
 
     <section class="home-introduction">
         <p>Welkom bij het receptenboek van Esma en Tom</p>
-        <p>Wij houden van de Italiaanse keuken! Hieronder kun je onze favoriete recepten vinden. Met deze recepten waan je je in een handomdraai in het mooie Italië. Of je nu een pizza salami wil maken of een heerlijke tiramisu, hier is alles te vinden!</p>
+        <p>Wij houden van de Italiaanse keuken! Hieronder kun je onze favoriete recepten vinden. Met deze recepten waan
+            je je in een handomdraai in het mooie Italië. Of je nu een pizza salami wil maken of een heerlijke tiramisu,
+            hier is alles te vinden!</p>
     </section>
 
     <section class="home-recipe-grid">
         <a href="./spaghettiBolognese.html" class="home-recipe">
             <img src="./images/SpaghettiBolognese.jpg" alt="">
-            <p>Spaghetti Bolognese</p>
+            <p class="text-center">Spaghetti Bolognese</p>
         </a>
         <a href="./pizzaSalami.html" class="home-recipe">
             <img src="./images/PizzaSalami.jfif" alt="">
-            <p>Pizza Salami</p>
+            <p class="text-center">Pizza Salami</p>
         </a>
         <a href="./tiramisu.html" class="home-recipe">
             <img src="./images/Tiramisu.jpg" alt="">
-            <p>Tiramisu</p>
+            <p class="text-center">Tiramisu</p>
         </a>
         <a href="./spaghettiBolognese.html" class="home-recipe">
             <img src="./images/SpaghettiBolognese.jpg" alt="">
-            <p>Spaghetti Bolognese</p>
+            <p class="text-center">Spaghetti Bolognese</p>
         </a>
     </section>
 
@@ -57,6 +59,7 @@
             </div>
         </footer>
     </div>
-   
+
 </body>
+
 </html>
