--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,7 @@
             <p class="text-center">Spaghetti Bolognese</p>
         </a>
         <a href="./pizzaSalami.html" class="home-recipe">
-            <img src="./images/PizzaSalami.jfif" alt="">
+            <img src="./images/PizzaSalami.jpg" alt="">
             <p class="text-center">Pizza Salami</p>
         </a>
         <a href="./tiramisu.html" class="home-recipe">
