--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -14,15 +14,19 @@
     padding-bottom: 3rem;
 
     img {
-        aspect-ratio: 1/1.5;
+        aspect-ratio: 1 / 1.5;
         object-fit: cover;
+        height: 100%;
     }
 
     a {
-    position: relative;
-    overflow: hidden;
-    border-radius: 1rem;
-    
+        position: relative;
+        overflow: hidden;
+        border-radius: 1rem;
+        aspect-ratio: 1 / 1.5;
+        // max-height: 100%;
+        object-fit: cover;
+
     }
 
     p {
@@ -32,17 +36,17 @@
         transform: translate(-50%, -50%);
         color: white;
         opacity: 0;
-        background: rgba(0,0,0,0.5);
-        box-shadow: 0 0 0 1000px rgba(0,0,0,0.5);
+        background: rgba(0, 0, 0, 0.5);
+        box-shadow: 0 0 0 1000px rgba(0, 0, 0, 0.5);
         transition: opacity 0.5s;
     }
 
     a:hover {
-        
+
         p {
             opacity: 1;
         }
-    }    
+    }
 }
 
 .home-recipe {
