--- a/views/pizzaSalami.html
+++ b/views/pizzaSalami.html
@@ -32,7 +32,7 @@
             <p>Alleen zoals moeder het maakt</p>
         </div>
         <div class="recipe-title-image">
-            <img src="./images/PizzaSalami.jfif" alt="Spaghetti Bolognese" srcset="">
+            <img src="./images/PizzaSalami.jpg" alt="Spaghetti Bolognese" srcset="">
         </div>
     </section>
 
@@ -59,21 +59,38 @@
             <h2>Bereidingswijze:</h2>
             <ol>
                 <li>
-                    Giet het lauwwarme water in een brede bak of schaal en voeg de gist en suiker toe. Roer goed door, tot de gist egaal verdeeld is. Laat vervolgens een kwartier staan, tot het gistproces op gang is gekomen. Het is van belang dat het water rond de 35 graden is, hierbij werkt gist optimaal. De suiker helpt om dit proces op gang te brengen.
+                    Giet het lauwwarme water in een brede bak of schaal en voeg de gist en suiker toe. Roer goed door,
+                    tot de gist egaal verdeeld is. Laat vervolgens een kwartier staan, tot het gistproces op gang is
+                    gekomen. Het is van belang dat het water rond de 35 graden is, hierbij werkt gist optimaal. De
+                    suiker helpt om dit proces op gang te brengen.
                 </li>
 
                 <li>
-                    Bestuif het werkblad met wat bloem en maak hierop een bergje van de bloem, of gebruik een grote, brede kom. Meng het zout, eventueel de oregano en de bloem en giet hier het gistmengsel en de olijfolie over, eventueel in fasen. Kneed het deeg ongeveer 10 minuten. In het begin zal het deeg plakkerig zijn, maar gaandeweg wordt het steeds soepeler. Door het zo lang te kneden worden lange ketens gevormd, waardoor het deeg sterker wordt, en wordt het heel soepel, zodat het goed te vormen is. Doe de deegbal in een met olijfolie ingevette bak, dek deze af met een vochtige theedoek en zet deze op een warme plek weg, bijvoorbeeld naast de oven of de verwarming, om 1 tot 2 uur te rijzen.
+                    Bestuif het werkblad met wat bloem en maak hierop een bergje van de bloem, of gebruik een grote,
+                    brede kom. Meng het zout, eventueel de oregano en de bloem en giet hier het gistmengsel en de
+                    olijfolie over, eventueel in fasen. Kneed het deeg ongeveer 10 minuten. In het begin zal het deeg
+                    plakkerig zijn, maar gaandeweg wordt het steeds soepeler. Door het zo lang te kneden worden lange
+                    ketens gevormd, waardoor het deeg sterker wordt, en wordt het heel soepel, zodat het goed te vormen
+                    is. Doe de deegbal in een met olijfolie ingevette bak, dek deze af met een vochtige theedoek en zet
+                    deze op een warme plek weg, bijvoorbeeld naast de oven of de verwarming, om 1 tot 2 uur te rijzen.
                 </li>
 
                 <li>
-                    Kneed het deeg, dat nu ongeveer twee keer zo groot gerezen is, nog een keer goed door en verdeel het in de juiste portie per pizza. Rol elke portie uit tot een pizza. In principe geldt: hoe dunner hoe beter!
+                    Kneed het deeg, dat nu ongeveer twee keer zo groot gerezen is, nog een keer goed door en verdeel het
+                    in de juiste portie per pizza. Rol elke portie uit tot een pizza. In principe geldt: hoe dunner hoe
+                    beter!
                 </li>
                 <li>
-                    Maak de randen iets dikker, zodat de saus er niet afloopt en bedek de pizza met de topping. Hou daarbij je eigen voorkeur aan qua hoeveelheid. Wat jij lekker vindt is goed! Zorg voor een goede, gelijkmatige verdeling.
+                    Maak de randen iets dikker, zodat de saus er niet afloopt en bedek de pizza met de topping. Hou
+                    daarbij je eigen voorkeur aan qua hoeveelheid. Wat jij lekker vindt is goed! Zorg voor een goede,
+                    gelijkmatige verdeling.
                 </li>
                 <li>
-                    Zet de pizza op een ingevette bakplaat of ingevet bakpapier in de midden van de oven en bak 15 minuten bij een voorverwamde oven op 250° C of 12 minuten bij 270° C (let op, de meeste ovens hebben zeker een half uur nodig om door en door verwarmd te worden op deze hoge temperaturen). Als je oven nog heter kan, hoeft de pizza nog korter te bakken. Zie voor meer informatie en tips het volledige recept om pizza te maken.
+                    Zet de pizza op een ingevette bakplaat of ingevet bakpapier in de midden van de oven en bak 15
+                    minuten bij een voorverwamde oven op 250° C of 12 minuten bij 270° C (let op, de meeste ovens hebben
+                    zeker een half uur nodig om door en door verwarmd te worden op deze hoge temperaturen). Als je oven
+                    nog heter kan, hoeft de pizza nog korter te bakken. Zie voor meer informatie en tips het volledige
+                    recept om pizza te maken.
                 </li>
             </ol>
         </section>
