--- a/views/index.html
+++ b/views/index.html
@@ -46,9 +46,9 @@
             <img src="./images/Tiramisu.jpg" alt="">
             <p class="text-center">Tiramisu</p>
         </a>
-        <a href="./spaghettiBolognese.html" class="home-recipe">
-            <img src="./images/SpaghettiBolognese.jpg" alt="">
-            <p class="text-center">Spaghetti Bolognese</p>
+        <a href="./pruimentaart.html" class="home-recipe">
+            <img src="./images/Italiaanse_pruimentaart.jfif" alt="">
+            <p class="text-center">Pruimentaart</p>
         </a>
     </section>
 
