--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'components/header.scss';
 @import 'components/footer.scss';
 
+@import 'pages/addRecipe.scss';
 @import 'pages/home.scss';
 @import 'pages/recipe.scss';
 @import 'pages/general.scss';
