--- a/css/main.css
+++ b/css/main.css
@@ -144,9 +144,24 @@ footer .bg-primary {
   flex-grow: 1;
 }
 
-form {
+.add-recipe > form {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 0.5rem;
+  padding: 2rem;
+  width: fit-content;
+  margin: 2rem auto;
+  border-radius: 1rem;
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.2);
+}
+.add-recipe > form input,
+.add-recipe > form textarea {
+  border: 1px solid black;
+  border-radius: 0.25rem;
+}
+.add-recipe > form input[type=submit] {
+  grid-column: span 2;
+  background-color: lightgray;
 }
 
 .home-introduction {
