--- a/scss/pages/_recipe.scss
+++ b/scss/pages/_recipe.scss
@@ -42,6 +42,13 @@ ul {
     padding-bottom: 1rem;
 }
 
+.olinstruction  {
+
+    li {
+        padding: 0.5rem;
+    }
+}
+
 
 .gray-text {
     color: gray;
