--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,5 +8,6 @@
 
 @import 'pages/addRecipe.scss';
 @import 'pages/home.scss';
+@import 'pages/pageNotFound.scss';
 @import 'pages/recipe.scss';
 @import 'pages/general.scss';
