--- a/css/main.css
+++ b/css/main.css
@@ -181,8 +181,7 @@ footer .bg-primary {
 }
 .home-recipe-grid img {
   aspect-ratio: 1/1.5;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
 }
 .home-recipe-grid a {
@@ -190,8 +189,7 @@ footer .bg-primary {
   overflow: hidden;
   border-radius: 1rem;
   aspect-ratio: 1/1.5;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .home-recipe-grid p {
   position: absolute;
@@ -236,8 +234,6 @@ footer .bg-primary {
   padding-left: 1rem;
   border-radius: 1rem;
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.5);
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
   height: fit-content;
 }
 
@@ -264,6 +260,11 @@ footer .bg-primary {
 
 .recipe-ingredients {
   min-width: 12.5rem;
+  word-break: break-all;
+}
+
+.recipe-how-to {
+  word-break: break-all;
 }
 
 ul {
@@ -288,4 +289,4 @@ body {
 .bg-primary {
   background: #e1e8e7;
   width: 100vw;
-}/*# sourceMappingURL=main.css.map */
+}
