--- a/scss/pages/_recipe.scss
+++ b/scss/pages/_recipe.scss
@@ -36,13 +36,18 @@
 
 .recipe-ingredients {
     min-width: 12.5rem;
+    word-break: break-all;
+}
+
+.recipe-how-to {
+    word-break: break-all;
 }
 
 ul {
     padding-bottom: 1rem;
 }
 
-.olinstruction  {
+.olinstruction {
 
     li {
         padding: 0.5rem;
